  - bugfix for parsing FIT files of Garmin Fenix 2 devices (missing max speed)
    (contribution by Alex Rampp, GitHub pull request #6)
  - updated Garmin FIT SDK library to version 16.50
  - Garmin FIT parser: read device name from exercise file
    (e.g. "Garmin EDGE 500")
  - Main Panel: display device name if available
    (instead of unused exercise type)
 Project changes:
  - use the Ubuntu Trusty image in Travis CI builds, it contains the latest
    Java 8 JDK (no workaround installation needed anymore)

v7.1.0:
 SportsTracker changes:
  - update of the bundled Java runtime to Java SE/FX 8u45, which contains many
    bugfixes
  - removed workarounds for Java versions earlier than 8u40
  - Exercise, Note and Weight Dialogs: use of one formatted text input for the
    entry time instead of separate inputs for hour and minute
    (always ensures valid time values and displayed format)
  - Overview Dialog: use of a spinner control for the year selection, incl.
    mouse wheel support
  - Travis CI: use of latest Oracle Java release (8u45) from 3rd party PPA repo
    (missing in Ubuntu repository)
  - update of ControlFX to 8.40.9
  - added support of HiDPI / Retina displays for all icons and text
    (all images and icons are now available as @2x-versions)
 ExerciseViewer changes:
   - Bugfixes in Diagram Panel (bug #49):
     - time axis in diagram must always start at 00:00 (the timezone offset
       needs to be ignored)
     - display lap markers at proper time positions
     - display proper formatted time in chart tooltips
 Translations:
   - updated french translation by Olivier M. <eliovir@gmail.com>

v7.0.0:
 SportsTracker changes:
  - use of no_aop version of Guice 3.0, is smaller and has less dependencies
  - update of Groovy to 2.4.1
  - update of JDOM to version 2.0.5
  - update of SwingX to 1.6.5-1
  - replaced SwingX-WS 1.0 library by JXMapViewer2 2.0 library
    - SwingX-WS is not under development anymore