@@ -30,13 +30,9 @@ public final class EVExercise {
      */
     private LocalDateTime dateTime;
     /**
-     * Exercise type (0 to 5).
+     * Exercise type (label).
      */
-    private byte type;
-    /**
-     * Exercise type label.
-     */
-    private String typeLabel;
+    private String type;
     /**
      * Record mode (what was recorded in exercise).
      */
@@ -151,20 +147,12 @@ public final class EVExercise {
         this.dateTime = dateTime;
     }
 
-    public byte getType() {
+    public String getType() {
         return type;
     }
 
-    public void setType(byte type) {
+    public void setType(String type) {
         this.type = type;
-    }
-
-    public String getTypeLabel() {
-        return typeLabel;
-    }
-
-    public void setTypeLabel(String typeLabel) {
-        this.typeLabel = typeLabel;
     }
 
     public RecordingMode getRecordingMode() {
@@ -343,7 +331,6 @@ public final class EVExercise {
         sBuilder.append("  userID=").append(this.userID).append("\n");
         sBuilder.append("  dateTime=").append(this.dateTime).append("\n");
         sBuilder.append("  type=").append(this.type).append("\n");
-        sBuilder.append("  typeLabel=").append(this.typeLabel).append("\n");
         sBuilder.append("  duration=").append(this.duration).append("\n");
         sBuilder.append("  recordingInterval=").append(this.recordingInterval).append("\n");
         sBuilder.append("  heartRateAVG=").append(this.heartRateAVG).append("\n");
