@@ -58,8 +58,7 @@ public class PolarF11RawParserTest {
         assertEquals(exercise.getFileType(), EVExercise.ExerciseFileType.F6RAW);
         assertEquals(exercise.getUserID(), (byte) 0);
         assertEquals(LocalDateTime.of(2008, 9, 1, 19, 27, 48), exercise.getDateTime());
-        assertEquals((byte) 0, exercise.getType());
-        assertEquals("Normal1", exercise.getTypeLabel());
+        assertEquals("Normal1", exercise.getType());
         assertEquals(false, exercise.getRecordingMode().isAltitude());
         assertEquals(false, exercise.getRecordingMode().isSpeed());
         assertEquals(false, exercise.getRecordingMode().isCadence());
