@@ -62,8 +62,7 @@ public class TimexPwxParserTest {
         assertEquals(exercise.getFileType(), EVExercise.ExerciseFileType.TIMEX_PWX);
         assertEquals(exercise.getUserID(), (byte) 0);
         assertEquals(LocalDateTime.of(2010, 6, 18, 20, 12, 0), exercise.getDateTime());
-        assertEquals((byte) 0, exercise.getType());
-        assertEquals("Run", exercise.getTypeLabel());
+        assertEquals("Run", exercise.getType());
         assertEquals(false, exercise.getRecordingMode().isAltitude());
         assertEquals(false, exercise.getRecordingMode().isSpeed());
         assertEquals(false, exercise.getRecordingMode().isCadence());
@@ -209,8 +208,7 @@ public class TimexPwxParserTest {
         assertEquals(exercise.getFileType(), EVExercise.ExerciseFileType.TIMEX_PWX);
         assertEquals(exercise.getUserID(), (byte) 0);
         assertEquals(LocalDateTime.of(2010, 9, 9, 17, 53, 21), exercise.getDateTime());
-        assertEquals((byte) 0, exercise.getType());
-        assertEquals("Bike", exercise.getTypeLabel());
+        assertEquals("Bike", exercise.getType());
         assertEquals(true, exercise.getRecordingMode().isAltitude());
         assertEquals(true, exercise.getRecordingMode().isSpeed());
         assertEquals(false, exercise.getRecordingMode().isCadence());
@@ -325,8 +323,7 @@ public class TimexPwxParserTest {
         assertEquals(exercise.getFileType(), EVExercise.ExerciseFileType.TIMEX_PWX);
         assertEquals(exercise.getUserID(), (byte) 0);
         assertEquals(LocalDateTime.of(2013, 1, 1, 8, 22, 52), exercise.getDateTime());
-        assertEquals((byte) 0, exercise.getType());
-        assertEquals("Run", exercise.getTypeLabel());
+        assertEquals("Run", exercise.getType());
         assertEquals(true, exercise.getRecordingMode().isAltitude());
         assertEquals(true, exercise.getRecordingMode().isSpeed());
         assertEquals(false, exercise.getRecordingMode().isCadence());
